  * Moved a couple of validation functions from the libsnapwebsites to here.
  * Broke up the tests in a character and a string so we can just validate a
    standalone character too.
  * Added another validation for UTF-32 strings and characters.
  * Allow for a specific test to be run with `mk -t <name>`.
  * Allow for a nullptr when calling start_with_bom().

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 17 Jul 2019 19:58:43 -0800

libutf8 (1.0.5.1~xenial) xenial; urgency=high

  * Bumped version to force a rebuild, just in case.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 17 Jul 2019 19:58:43 -0800

libutf8 (1.0.5.0~xenial) xenial; urgency=high

  * Added a way to create an iterator at the end.
  * Added == and != with another utf8_iterator.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 29 Jun 2019 05:05:11 -0800

libutf8 (1.0.4.0~xenial) xenial; urgency=high

  * Added a PROJECT_BRIEF description.
  * Added in=C++ to the MAPPING_EXTENSION.
  * Updated the doxy file to 1.8.11.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 11 Jun 2019 23:55:25 -0800

libutf8 (1.0.3.0~xenial) xenial; urgency=high

  * Moved the catch2 implementation to our `snapcatch2.hpp` header instead.
  * Updated the tests accordingly.
  * Cleaned up various declarations in each file.
  * Moved our `obj_setenv()` to `snapdev`.

 -- Alexis Wilke <alexis@m2osw.com>  Sat,  1 Jun 2019 00:24:36 -0800

libutf8 (1.0.2.0~xenial) xenial; urgency=high

  * Got the test coverage back to 100%.
  * Renamed tge tests without the "unittest_" introducer.
  * Added the `start_with_bom()` function and corresponding tests.
  * Fixed standalone characters, the introducer is U for char32_t characters.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 28 May 2019 18:09:01 -0800

libutf8 (1.0.1.0~xenial) xenial; urgency=high

  * Implemented the to and from UTF-8 and UTF-16 encoding.
  * Fixed the u8casecmp() test function which would test 0xD800 to 0xDFFF
    as valid characters.